:sparkles: Name Inverter Kata